<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/firstColor"
    android:orientation="vertical"
    tools:context=".view.activity.LoginActivity">


    <Toolbar
        android:id="@+id/main_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="@color/secondColor">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/welcome"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="24sp"/>
        </RelativeLayout>
    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/login_activity_email"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email"
            android:paddingStart="20dp"
            android:background="@drawable/edit_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/login_activity_password"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            android:paddingStart="20dp"
            android:background="@drawable/edit_text"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/main_activity_sign_in"
        android:layout_marginTop="10dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/sign_in"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:background="@drawable/button"/>

    <TextView
        android:id="@+id/main_activity_forgot_password"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/main_activity_sign_up"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"/>



</LinearLayout>