<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/firstColor"
    android:orientation="vertical"
    tools:context=".view.fragment.UserInformationFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_information"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/user_fragment_username"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor"
            android:inputType="text"
            android:enabled="false"
            android:hint="@string/username"
            android:paddingStart="20dp"
            android:background="@drawable/edit_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/user_fragment_email"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="50dp"
            android:enabled="false"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:paddingStart="20dp"
            android:background="@drawable/edit_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/user_fragment_phone"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor"
            android:inputType="phone"
            android:enabled="false"
            android:hint="@string/phone"
            android:paddingStart="20dp"
            android:background="@drawable/edit_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/usertype"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/user_fragment_user_type"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:text="@string/costumer"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_fragment_total_earn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/total_earn"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/user_fragment_total_earn"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/white"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/user_fragment_confirm_license"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/confirm_license"
        android:gravity="center"
        android:background="@drawable/edit_text"
        android:textColor="@color/white"
        android:layout_gravity="end"
        android:textSize="17sp"
        android:visibility="gone"
        tools:ignore="RtlCompat" />


    <TextView
        android:id="@+id/user_fragment_password_change"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_change"
        android:gravity="center"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:drawableEndCompat="@drawable/ic_forward"
        tools:ignore="RtlCompat" />
</LinearLayout>