<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/firstColor"
    android:orientation="vertical"
    tools:context=".view.fragment.MainFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_2"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/recipient_name"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/main_fragment_recipient_name"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor"
            android:inputType="text"
            android:hint="@string/recipient_name"
            android:paddingStart="20dp"
            android:background="@drawable/edit_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/recipient_address"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/main_fragment_address"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor"
            android:inputType="text"
            android:hint="@string/recipient_address"
            android:paddingStart="20dp"
            android:background="@drawable/edit_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/package_type"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/white"/>

        <Spinner
            android:id="@+id/main_fragment_packet_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_weight="5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/main_fragment_price"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor"
            android:inputType="number"
            android:hint="@string/price"
            android:paddingStart="20dp"
            android:background="@drawable/edit_text"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/main_fragment_order"
        android:layout_marginTop="5dp"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/order"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:background="@drawable/button_orange"/>



</LinearLayout>