<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/firstColor"
    android:orientation="vertical"
    tools:context=".view.fragment.PasswordChangeFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_change"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:layout_gravity="center"
        android:layout_marginTop="75dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/password_change_fragment_new_password"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor"
            android:inputType="textPassword"
            android:hint="@string/new_password"
            android:paddingStart="20dp"
            android:background="@drawable/edit_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/new_password_again"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/password_change_fragment_new_password_again"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor"
            android:inputType="textPassword"
            android:hint="@string/new_password_again"
            android:paddingStart="20dp"
            android:background="@drawable/edit_text"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/password_change_fragment_change"
        android:layout_marginTop="5dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/change"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:background="@drawable/button"/>

</LinearLayout>